postgresql/03-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:13.6
        imagePullPolicy: "IfNotPresent"
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgredb
          mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: postgres-pv-claim
